--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,7 +5,7 @@
 <li>Historia</li>
 <li><a href="./partials/characters">Personajes</a></li>
 <li>Directores</li>
-<li>Contactanos</li>
+<li><a href="./registrate">Registrate</a></li>
 
 
 
