--- a/views/partials/characters.hbs
+++ b/views/partials/characters.hbs
@@ -4,3 +4,7 @@
 <p>Apretando este botón, podrás ver un listado de todos los personajes de la serie
 </p>
 <a href="../infoChar">Ver Personajes</a>
+<a href="../">Inicio</a>
+{{#if characters}}
+<a href="./partials/characters">Ocultar</a>
+{{/if}}
