--- a/views/registrate.hbs
+++ b/views/registrate.hbs
@@ -1,4 +1,4 @@
-<form id="formElem">
+<form action= "/registrate" method="post" id="formElem">
     <label for="firstName">Nombre:</label>
 <input id="firstName" type="text" name="firstName">
 
