--- a/views/registrate.hbs
+++ b/views/registrate.hbs
@@ -5,8 +5,14 @@
     <label for="lastName">Apellido:</label>
 <input id="lastName" type="text" name="lastName">
 
-<input type="submit" value="enviar">
+    <label for="email">Email</label>
+ <input id="email" type="text" name="email">   
 
+<input type="submit" value="enviar">
 </form>
 <script src="../helpers/formController"></script>
 
+{{message}}
+{{#each arrWarnings}}
+<p>{{msg}}</p>
+{{/each}}
