--- a/views/registrate.hbs
+++ b/views/registrate.hbs
@@ -6,7 +6,10 @@
 <input id="lastName" type="text" name="lastName">
 
     <label for="email">Email</label>
- <input id="email" type="text" name="email">   
+ <input id="email" type="text" name="email">  
+
+   <label for="password">Contraseña</label>
+ <input id="pasword" type="password" name="pasword"> 
 
 <input type="submit" value="enviar">
 </form>
